Section 3 : Serving & Fetching Data From Expres| 12. Serving Product -Back End

--- a/package.json
+++ b/package.json
@@ -1,6 +1,22 @@
 {
+  "name": "proshopmern",
+  "version": "1.0.0",
+  "description": "MERN sshopping cart app",
+  "main": "server.js",
+  "scripts": {
+    "start": "node backend/server.js "
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ujangaris/MERN-eCommerce-From-Scratch.git"
+  },
+  "author": "Ujang Arisandi",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/ujangaris/MERN-eCommerce-From-Scratch/issues"
+  },
+  "homepage": "https://github.com/ujangaris/MERN-eCommerce-From-Scratch#readme",
   "dependencies": {
-    "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^5.3.0"
+    "express": "^4.17.3"
   }
 }
