--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "MERN sshopping cart app",
   "main": "server.js",
   "scripts": {
-    "start": "node backend/server.js "
+    "start": "node backend/server.js",
+    "server": "nodemon backend/server.js",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -18,5 +21,9 @@
   "homepage": "https://github.com/ujangaris/MERN-eCommerce-From-Scratch#readme",
   "dependencies": {
     "express": "^4.17.3"
+  },
+  "devDependencies": {
+    "concurrently": "^7.0.0",
+    "nodemon": "^2.0.15"
   }
 }
