--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/ujangaris/MERN-eCommerce-From-Scratch#readme",
   "dependencies": {
     "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "mongoose": "^6.2.2"
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
